--- a/FreteFyUI/src/styles.scss
+++ b/FreteFyUI/src/styles.scss
@@ -15,3 +15,22 @@ nav {
       }
     }
   }
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+  .btn-acao {
+    padding: 10px;
+    font-size: 18px;
+  }
