Adicionando mensagem final

--- a/FreteFyUI/src/app/components/home/home.component.html
+++ b/FreteFyUI/src/app/components/home/home.component.html
@@ -4,4 +4,16 @@
     <a routerLink="/regiao">Região</a>
   </nav>
 
-<p>Bem-vindo à página inicial!</p>
+<p>Bem-vindo ao projeto "CRUD de Região"</p>
+<br>
+
+<p>Este é um projeto feito para a vaga de Desenvolvedor FullStack .Net na empresa Fretefy.</p>
+<p>Espero que gostem</p>
+
+<br>
+<p>Desenvolvedor: Arthur Martins Thomé</p>
+<p>Linkedin: <a href="https://www.linkedin.com/in/arthur-thom%C3%A9-735571185/">https://www.linkedin.com/in/arthur-thom%C3%A9-735571185/</a></p>
+
+<br>
+<br>
+<p>Desde já peço desculpas se encontrarem algum bug.</p>
